--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ a {
     color: #213053;
 }
 
+select {
+    appearance: none;
+}
+
+input {
+    outline: none;
+}
+
 .button {
     font-family: 'Raleway', sans-serif;
     color: #ffffff;
@@ -16,7 +24,16 @@ a {
     cursor: pointer;
     background-color: #23a030;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
+    font-size: 15px;
+    border-radius: 15px;
+    padding: 15px;
+    transition: all 150ms ease-in;
+}
 
+.button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: all 0.3s ease-in;
 }
 
 .header {
@@ -34,12 +51,6 @@ a {
     font-size: 15px;
     font-weight: 600;
     margin-right: 25px;
-}
-
-.header__button {
-    font-size: 15px;
-    border-radius: 15px;
-    padding: 15px;
 }
 
 .offer {
@@ -81,4 +92,94 @@ a {
 .offer__sun-img {
     width: 100px;
     height: 100px;
+}
+
+.form {
+    background-color: #1D263A;
+    color: #FFF;
+    padding: 115px 0;
+    text-align: center;
+}
+
+.form__container {
+    width: 550px;
+    margin: 0 auto;
+}
+
+.form__title {
+    font-size: 48px;
+}
+
+.form__subtitle {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+.form__word {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.form__group_title {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.form__group_action {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border: none;
+    border-radius: 15px;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+.footer {
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__group:not(:last-child) {
+    margin-right: 80px;
+}
+
+.footer__title {
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links_active {
+    margin-bottom: 15px;
+}
+
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
 }
